--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h1><span class="white-color">Raihan Kabir</span> World!!!</h1>
             <h3>Every Day Learning English</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae est temporibus, placeat hic laboriosam corrupti veniam voluptatem repellendus iste molestias magni ipsa velit possimus omnis minus suscipit beatae voluptatibus alias perferendis quaerat incidunt adipisci in.!</p>
+            <a class="link-button" target="-blank"href="#">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="Layer-Banner.jpg" alt="">
